team handbook readme

--- a/README.org
+++ b/README.org
@@ -1,6 +1,7 @@
+* Chenla Team Handbook
 
+[[https://img.shields.io/badge/made%20by-Chenla%20Institute-999999.svg?style=flat-square]] 
+[[https://img.shields.io/badge/category-deploy-0072B2.svg?style=flat-square]]
+[[https://img.shields.io/badge/licence-MIT%2FCC%20BY--SA%204.0-000000.svg?style=flat-square]]
 
-* Welcome
-
-This is a collection of documents that make up the core for the Chenla
-project.
+Documents and handbooks used by projects at the Chenla Institute.
