--- a/hb-workflow.org
+++ b/hb-workflow.org
@@ -687,11 +687,11 @@ Workflow is used on the Kanban Board and in TODO items
  - *DONE*  : completed work or closed issues
 
 *** Type
- - *bug*      : [[https://img.shields.io/badge/type-bug-CC79A7.svg?style=flat-square]]
- - *feature*  : [[https://img.shields.io/badge/type-feature-D55E00.svg?style=flat-square]]
- - *request*  : [[https://img.shields.io/badge/type-request-56B4E9.svg?style=flat-square]]
- - *wish*     : [[https://img.shields.io/badge/type-wish-D55E00.svg?style=flat-square]] 
- - *moonshot* : [[https://img.shields.io/badge/type-moonshot-999999.svg?style=flat-square]] 
+ | *bug*      | [[https://img.shields.io/badge/type-bug-CC79A7.svg?style=flat-square]]      |
+ | *feature*  | [[https://img.shields.io/badge/type-feature-D55E00.svg?style=flat-square]]  |
+ | *request*  | [[https://img.shields.io/badge/type-request-56B4E9.svg?style=flat-square]]  |
+ | *wish*     | [[https://img.shields.io/badge/type-wish-D55E00.svg?style=flat-square]]     |
+ | *moonshot* | [[https://img.shields.io/badge/type-moonshot-999999.svg?style=flat-square]] |
 
 *** Priority 
 
@@ -714,18 +714,15 @@ discussed before being assigned.
 
 Used mostly for repo README files
 
-- Made-By Chenla : [[https://img.shields.io/badge/made%20by-Chenla%20Institute-999999.svg?style=flat-square]] 
-- Licence : [[https://img.shields.io/badge/licence-MIT%2FCC%20BY--SA%204.0-000000.svg?style=flat-square]]
+| [[https://img.shields.io/badge/made%20by-Chenla%20Institute-999999.svg?style=flat-square]]    | Made-By Chenla |
+| [[https://img.shields.io/badge/licence-MIT%2FCC%20BY--SA%204.0-000000.svg?style=flat-square]] | Licence        |
+
 
 ** Category
-- [[https://img.shields.io/badge/category-primer-56B4E9.svg?style=flat-square]]
-  -- Descriptive, prescripive, theory, history, background
-- [[https://img.shields.io/badge/category-deploy-0072B2.svg?style=flat-square]]
-  -- Things that in principle can be built and deployed
-- [[https://img.shields.io/badge/category-project-D55E00.svg?style=flat-square]]
-  -- Projects build and deploy things
-- [[https://img.shields.io/badge/category-specification-CC79A7.svg?style=flat-square]]
-  -- Technical specifications & standards
+| [[https://img.shields.io/badge/category-primer-56B4E9.svg?style=flat-square]]        | Descriptive, prescripive, theory, history, background |
+| [[https://img.shields.io/badge/category-deploy-0072B2.svg?style=flat-square]]        | Things that in principle can be built and deployed    |
+| [[https://img.shields.io/badge/category-project-D55E00.svg?style=flat-square]]q      | Projects build and deploy things                      |
+| [[https://img.shields.io/badge/category-specification-CC79A7.svg?style=flat-square]] | Technical specifications & standards                  |
 
 ** Entity Types
 
@@ -742,14 +739,11 @@ Used mostly for repo README files
 
 ** Status
 
-- [[https://img.shields.io/badge/status-stub-CC79A7.svg?style=flat-square]]
-  -- Stub; placeholder
-- [[https://img.shields.io/badge/status-wip-D55E00.svg?style=flat-square]]
-  -- Work-in-Progress
-- [[https://img.shields.io/badge/status-draft-E69F00.svg?style=flat-square]] -- Draft
-- [[https://img.shields.io/badge/status-rfc-009E73.svg?style=flat-square]]
-  -- Request for Feedback and Comments
-- [[https://img.shields.io/badge/status-release-0072B2.svg?style=flat-square]] -- Published/Released
+| [[https://img.shields.io/badge/status-stub-CC79A7.svg?style=flat-square]]    | Stub; placeholder                 |
+| [[https://img.shields.io/badge/status-wip-D55E00.svg?style=flat-square]]     | Work-in-Progress                  |
+| [[https://img.shields.io/badge/status-draft-E69F00.svg?style=flat-square]]   | Draft                             |
+| [[https://img.shields.io/badge/status-rfc-009E73.svg?style=flat-square]]     | Request for Feedback and Comments |
+| [[https://img.shields.io/badge/status-release-0072B2.svg?style=flat-square]] | Published/Released                |
 
 ** Git Tags
 
