--- a/hb-workflow.org
+++ b/hb-workflow.org
@@ -757,6 +757,8 @@ Used mostly for repo README files
 | [[https://img.shields.io/badge/type-blob-0072B2.svg?style=flat-square]]     | blob     |
 | [[https://img.shields.io/badge/type-TOC-0072B2.svg?style=flat-square]]      | TOC      |
 | [[https://img.shields.io/badge/type-readme-0072B2.svg?style=flat-square]]   | README   |
+| [[https://img.shields.io/badge/type-work-0072B2.svg?style=flat-square]]     | Work     |
+
 
 ** Status
 
