--- a/hb-workflow.org
+++ b/hb-workflow.org
@@ -4,7 +4,7 @@
 #+TOC: headlines 4
 #+PROPERTY: filename
   :PROPERTIES:
-  :CUSTOM_ID: 
+  :CUSTOM_ID: Chenla_workflow_handbook
   :Name:      /home/deerpig/proj/chenla/docs/hb-workflow.org
   :Created:   2017-02-07T16:53@Prek Leap (11.642600N-104.919210W)
   :ID:        7263a62c-5dde-4fac-acb0-b20ee27b19e4
