--- a/index.org
+++ b/index.org
@@ -44,10 +44,8 @@ others, but YMMV.  You can find the source code for the site on
  - [[hb-style-guides.org][Style Guide Handbook]] 
  - [[./hb-workflow.org][Workflow Handbook]] | General
    - [[./hb-git-branch.org][Git Branching Model]]
-   - Publishing Workflow
-   - Application Workflow
-   - Design Workflow
-   - Project Workflow
+   - [[./rb-git-workflow.org][Git Workflow in GitLab]]
+
    - MICE Planning Workflow
    - Personal Workflow Cookbook
  - [[./hb-methodologies.org][Development Methodologies Handbook]]
