--- a/index.org
+++ b/index.org
@@ -50,7 +50,7 @@ others, but YMMV.  You can find the source code for the site on
    - Personal Workflow Cookbook
  - [[./hb-methodologies.org][Development Methodologies Handbook]]
  - [[./hb-meetings.org][Meetings Handbook]] 
-
+ - [[./hb-deployment-integration.org][Deployment & Integration Handbook]]
  - [[./hb-issues.org][Issues Handbook]]
  - [[./hb-project-groups.org][Project Groups]]
 * HOWTO
