--- a/hb-context-shifting.org
+++ b/hb-context-shifting.org
@@ -27,3 +27,66 @@
 
 * Introduction
 
+It's important to teach both managers and creative people the
+importance of the costs of context switching.
+
+This is something we need to stress in chalkhall as well, as a general
+principle that applies to any task.  It doesn't even have to be
+mental, physical tasks entail context switching as well.
+
+  - [[https://www.joelonsoftware.com/2001/02/12/human-task-switches-considered-harmful/][Human Task Switches Considered Harmful]] | Joel on Software
+  - [[https://www.petrikainulainen.net/software-development/processes/the-cost-of-context-switching/][The Cost of Context Switching]] | petrikainulainen.net
+  - [[https://www.bryanbraun.com/2012/06/25/multitasking-and-context-switching/][Multitasking and Context Switching]] | Bryan Braun - Student of Life
+
+
+[[./img/context-switching/multitask3.jpg]]
+
+
+For this reason, I think it's important to always have sysadmins
+either working on projects, or doing customer triage.  This ensures
+that sysadmins have blocks of time to do complex tasks that require
+extended concentration.
+
+This goes back to Paul Graham's [[http://www.paulgraham.com/makersschedule.html][manager and maker schedules]] -- I would
+extend that to six broader catagories that are divided into /negotium/
+which is anything that interacts with others, and /otium/ which is
+solitary and contemplative in nature.
+
+** Negotium
+
+*Social* which are any tasks that require interaction with other
+people, this broadly includes management, but also includes meetings,
+customer service, and answering questions and discussion.  So time
+spent in IRC, Slack, Facebook as well as SCRUM standups, telephone
+calls and chatting while getting coffee are all in this category.
+
+*Task* is time spent on relatively short and well defined tasks that
+don't require a lot of research, concentration or effort.  Tasks are a
+kind of rest, keeping your hands and attention busy which allows your
+brain to work on Maker and Mastering tasks subconsciously.
+
+*Play* is any activity that is physically or mentally engaging that is
+an end in itself, often together with others.  Play can be anything
+from a game of chess, to playing volleyball with coworkers after work,
+to going to the cinema, a bar (though this often overlaps with social
+activities), playing darts, playing with your children or even having
+sex.  When play is done as a solitary activity, it overlaps with Rest.
+
+** Otium
+
+*Maker* is time spent on anything that requires an extended amount of
+time to load into your brain, and concentrate on.  This time needs to
+be the most protected because the cost of interruptions is so
+expensive.
+
+*Mastering* deliberate practice is similar to Maker time, but is
+concerned more with the process of mastering something rather than
+making something new.
+
+*Rest* include any solitary activity that allows your brain and body
+to recharge.  This includes everything from naps, deep sleep, zoning
+out and watching the traffic, river or ocean with a beer or cup of tea
+or coffee.  It might be long walks, playing the ukelele, or even more
+strenuous excercise like running, fishing, mountain climbing,
+gardening etc.
+
