--- a/hb-context-shifting.org
+++ b/hb-context-shifting.org
@@ -37,9 +37,27 @@ mental, physical tasks entail context switching as well.
   - [[https://www.joelonsoftware.com/2001/02/12/human-task-switches-considered-harmful/][Human Task Switches Considered Harmful]] | Joel on Software
   - [[https://www.petrikainulainen.net/software-development/processes/the-cost-of-context-switching/][The Cost of Context Switching]] | petrikainulainen.net
   - [[https://www.bryanbraun.com/2012/06/25/multitasking-and-context-switching/][Multitasking and Context Switching]] | Bryan Braun - Student of Life
+  - [[https://blog.codinghorror.com/the-multi-tasking-myth/][The Multitasking Myth]] | Coding Horror
+
+Kathy Sierra has some good points as well, despite repeatedly using
+the weasel word /mindfulness/ thoughout the posts.
+  - [[http://headrush.typepad.com/creating_passionate_users/2005/03/your_brain_on_m.html][Creating Passionate Users: Your brain on multitasking]] | Kathy Sierra
+  - [[http://headrush.typepad.com/creating_passionate_users/2006/03/multitasking_ma.html][Creating Passionate Users: Multitasking makes us stupid?]] | Kathy Sierra
 
 
-[[./img/context-switching/multitask3.jpg]]
+
+  [[./img/context-switching/multitask3.jpg]]
+
+Jeff Atwood of coding horror fame, quoted this [[http://news.bbc.co.uk/1/hi/uk/4471607.stm][BBC study]]:
+
+#+begin_quote
+The study, carried out at the Institute of Psychiatry, found excessive
+use of technology reduced workers' intelligence. Those distracted by
+incoming email and phone calls saw a 10-point fall in their IQ - more
+than twice that found in studies of the impact of smoking marijuana,
+said researchers.
+#+end_quote
+
 
 
 For this reason, I think it's important to always have sysadmins
